# jmsd_foreign_template

./: .gitignore  .gitmodules  CMake-build-configuration.cmake  CMake-verbosity-configuration.cmake  CMakeLists.txt  README.md
executable_template/: CMakeLists.txt
executable_template/sources/et/: et_class.cpp
library_subproject_template/: CMakeLists.txt
library_subproject_template/base_library_template/: CMakeLists.txt
library_subproject_template/base_library_template/sources/blt/: blt.h  blt_class.cpp  blt_class.h  blt_shared_library_support.h
library_subproject_template/derived_library_template/: CMakeLists.txt
library_subproject_template/derived_library_template/sources/dlt/: dlt_class.cpp
